--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -20,10 +20,10 @@
           <a href="{% url 'accounts:signup' %}" class="text-decoration-none text-dark">Cadastrar Novo Usuário</a>
         </li>
         <li class="list-group-item">
-          <a href="{% url 'empresas:cadastrar_empresa' %}" class="text-decoration-none text-dark">Cadastrar Nova Empresa</a>
+          <a href="{% url 'empresas:cadastrar_empresa_avancada' %}" class="text-decoration-none text-dark">Cadastrar Nova Empresa</a>
         </li>
         <li class="list-group-item">
-          <a href="{% url 'empresas:cadastrar_categoria' %}" class="text-decoration-none text-dark">Cadastrar Nova Categoria</a>
+          <a href="{% url 'empresas:cadastrar_categoria_avancada' %}">Cadastrar Nova Categoria</a>
         </li>
         <li class="list-group-item">
           <a href="{% url 'accounts:lista_usuarios' %}" class="text-decoration-none text-dark">Lista de Usuários</a>
