--- a/templates/partials/accounts/selecionar_usuario_permissoes.html
+++ b/templates/partials/accounts/selecionar_usuario_permissoes.html
@@ -17,7 +17,7 @@
   </div>
 
   <!-- 📋 Formulário AJAX -->
-  <form id="permissoes-form" method="POST" class="ajax-form">
+  <form id="usuarios-form" method="POST" class="ajax-form">
     {% csrf_token %}
 
     <!-- 🛠️ Ações -->
